# pandoc_pdf

./: .gitignore  LICENSE  README.md  pyproject.toml  test.toml
.github/: release-drafter.yml
.github/workflows/: pandoc-build.yml  publish.yml  version.py
dist-newstyle/cache/: compiler
pandoc_pdf/: main.py
pandoc_pdf/default_config/: defaults.yml  setting.yml
src/pandoc_pdf/: main.py
src/pandoc_pdf/cache/: defaults_html5.yml  defaults_latex.yml
src/pandoc_pdf/default_config/: header.tex
src/pandoc_pdf_utils/: env.py  functions.py
src/pandoc_pdf_utils/default_config/: defaults.yml  header.tex  setting.yml
src/utils/: env.py  functions.py
src/utils/cache/: header.tex
tests/: README.md  test_pandoc_pdf.py
