[tool.poetry]
authors = ["rai"]
description = "Command to generate pdf easily with pandoc."
license = "MIT"
name = "pandoc_pdf"
packages = [
  {include = "pandoc_pdf", from = "src"},
  {include = "pandoc_pdf_utils", from = "src"},
]
version = "0.1.8"

[tool.poetry.dependencies]
PyYAML = "^6.0"
click = "^8.1.3"
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pytest = "^5.4.3"
tomlkit = "^0.11.8"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
autopep8 = "^1.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.5.0"]

[tool.poetry.scripts]
pandoc_pdf = 'pandoc_pdf.main:pandoc_pdf'
